--- a/week6_lab/list.html
+++ b/week6_lab/list.html
@@ -1,47 +1,39 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>ToDo App</title>
-    <meta charset="UTF-8">
-
+    <title>To Do App</title>
+    <!-- styles -->
+    <link rel="stylesheet" type="text/css" href="style.css">
     <!-- fonts -->
-<link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
-
-     <!-- styles -->
-      <link rel="stylesheet" type="text/css" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Slab" rel="stylesheet">
+    <!-- javascript -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="main.js" type="text/javascript"></script>
 </head>
 
 <body>
-    <header>
-    	<h1>My To Do Lists</h1>
-    	<nav>
-    		<a href="index.html">main</a>
-    		<a href="settings.html">settings</a>
-    	</nav>
-    </header>
+    <div id="container">
+        <header>
+            <h1>My To Do Lists</h1>
+            <nav>
+                <a href="index.html">main</a> -
+                <a href="index.html">settings</a>
+            </nav>
+        </header>
 
-    <div id="todo-lists">
+        <div id="todo-lists">
+            <div class="list">
+                <h2 class="list-title">Groceries</h2>
+                <ol id="grocery-list">
+                    <li><input type="checkbox" class="complete-item" onclick="completeListItem(this)"> Eggs <button class="delete-item">X</button></li>
+                    <li><input type="checkbox" class="complete-item" onclick="completeListItem(this)"> Milk <button class="delete-item">X</button></li>
+                    <li><input type="checkbox" class="complete-item" onclick="completeListItem(this)"> Cereal <button class="delete-item">X</button></li>
+                </ol>
 
-    	<div class="list">
-    		<h2 class="list-title">Groceries</h2>
-            <ol>
-                <li>Eggs</li>
-                <li>Milk</li>
-                <li>Cereal</li>
-            </ol>
-    	</div>
-
-        <input type="text"></input>
-        <button>Add Item</button>
-
-    	<div class="list">
-    		Homework 
-    	</div>
-
-    	<div class="list">
-    		Random Errands
-    	</div>
-        
+            </div>
+            <input id="new-list-item" type="text"></input>
+            <button id="add-item">Add Item</button>
+        </div>
     </div>
 </body>
 
