--- a/homework_5/contact-us.html
+++ b/homework_5/contact-us.html
@@ -14,7 +14,7 @@
 			<h1 style="text-align: center">Artisan Pillows For Your Home</h1>
 		</div>
 
-		<hr class="horizontalBar">
+		<hr class="horizontal-bar">
 
 		<div id="topNav">
 			<ul id="topNavList">
@@ -37,21 +37,29 @@
 		</div>
 
 		<hr class="horizontalBar">
-		<br>
 
-		<table id="mainImg">
-			<tr>
-				<td rowspan="2"><img src="images/couch1.jpg" alt="couch" height="413" style="margin-right:7px"></td>
-				<td><img src="images/couch2.jpeg" alt="couch" height="200" width="300" style="margin-bottom:5px"></td>
-			</tr>
+		<div id="mainContentDetail">
 
-			<tr>
-				<td><img src="images/couch3.png" alt="couch" height="200" width="300"></td>
-			</tr>
-		</table>
+			<div id="mainContentLeft">
+				<h2 style="margin-left: 25px">Map</h2>
+				<img src="images/map.png" alt="map" width="500" style="margin-left: 25px; float: left">
+			</div>
 
-		
+			<div id="mainContentRight" style="margin-bottom: 150px">
 
+				<h2>Hours</h2>
+				<p><strong>Monday-Friday</strong>: 9:00am-5:00pm</p>
+				<p><strong>Saturday-Sunday:</strong> 9:00am-9:00pm</p>
+				<p>*Hours may differ on national holidays. Contact store for more details*</p> 
+				<br>
+				<h2>Contact Us</h2>
+				<p><strong>Email</strong>: info@fluffstuff.com</p>
+				<p><strong>Phone</strong>: 412-FLU-FFFF</p>
+				<p><strong>Address:</strong> 1234 FluffStuff St.,</p>
+                <p>Pittsburgh, PA,</p>
+                <p>15289</p>
+
+            </div>
 	</div>
 </body>
 </html>
