--- a/homework_5/contactus.html
+++ b/homework_5/contactus.html
@@ -11,10 +11,10 @@
 
 		<div id="header">
 			<a href="index.html"><img class="center" src="images/logo.png" alt="logo" width="350"></a>
-			<h1>Artisan Pillows For Your Home</h1>
+			<h1 style="text-align: center">Artisan Pillows For Your Home</h1>
 		</div>
 
-		<hr class="horizontalBar">
+		<hr class="horizontal-bar">
 
 		<div id="topNav">
 			<ul id="topNavList">
@@ -37,41 +37,25 @@
 		</div>
 
 		<hr class="horizontalBar">
+		<br>
 
-		<div id="mainContentDetail">
-
-			<p style="text-align: left;"><a href="products.html">All Products</a> > The Couch Pillow</p>
-
-			<div id="mainContentLeft">
-
-				<div id="headerImg">
-					<img src="images/couchPillow.jpg" width="500" alt="couch pillow">
-				</div>
-
-				<div id="detailImg">
-					<img class="detailImgItem" src="images/detail1.jpg" width="125" alt="detail image 1">
-					<img class="detailImgItem" src="images/couchPillow.jpg" width="125" alt="detail image 2">
-					<img class="detailImgItem" src="images/detail2.jpg" width="125" alt="detail image 3">
-				</div>
-
-			</div>
+		<div id="mainContentLeft">
+			<h2>Map</h2>
+			<img src="images/map" alt="map">
+		</div>
 
 			<div id="mainContentRight">
 
-				<p style="color: red">$24.99</p>
+				<p>24.99</p>
 				<h2 style="text-align:left">The Couch Pillow</h2>
 				<p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est eopksio laborum. Sed ut perspiciatis unde omnis istpoe natus error sit voluptatem accusantium doloremque eopsloi laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunot explicabo. Nemo ernim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sedopk quia consequuntur magni dolores eos qui rationesopl voluptatem sequi nesciunt. Neque porro quisquameo est, qui dolorem ipsum quia dolor sit amet, eopsmiep consectetur, adipisci velit, seisud quia non numquam eius modi tempora incidunt ut labore et dolore wopeir magnam aliquam quaerat voluptatem eoplmuriquisqu</p>
+				<br>
 				<h3>Color:</h3>
 					<img src="images/colors.png" alt="colors">
 				<h3>Fill:</h3>
 					<img src="images/fill.png" alt="fill">
 				<h3>Qty:</h3>
-				<img src="images/blank.png" alt="qty" style="margin-bottom: 25px">
-			</div>
-			<br>
-			<img src="images/addToCart.png" alt="add to cart">
-			<img src="images/addToWishlist.png" alt="add to wishlist">
-		</div>
-</div>
+
+	</div>
 </body>
 </html>
