--- a/homework_5/products.html
+++ b/homework_5/products.html
@@ -11,7 +11,7 @@
 
 		<div id="header">
 			<a href="index.html"><img class="center" src="images/logo.png" alt="logo" width="350"></a>
-			<h1>- Artisan Pillows For Your Home -</h1>
+			<h1>Artisan Pillows For Your Home</h1>
 		</div>
 
 		<hr class="horizontalBar">
@@ -41,44 +41,40 @@
 
 	<div id="mainContentProduct">
 
-		<h2>All Products</h2>
+		<p>All Products</p>
 
-		<div id="productList" align="center">
+		<div id="productList">
 
 			<div class="productItem">
 				<img src="images/bedPillow.jpg" alt="bed pillow" width="200">
-					<p>Quicklook</p>
-					<br>
-					<h3>The Bed Pillow</h3>
-					<p>24.99</p>
-					<img src="images/quickAddButton.png" alt="quick add button">
+					<p class="productText">Quicklook</p>
+					<h3 class="productText">The Bed Pillow</h3>
+					<p class="productText" style="color: red">$24.99</p>
+					<img src="images/quickAddButton.png" alt="quick add" style="float: left;">
 			</div>
 
 			<div class="productItem">
 				<a href="couchpillow.html"><img src="images/couchPillow.jpg" alt="couch pillow" width="200"></a>
-					<p>Quicklook</p>
-					<br>
-					<a href="couchpillow.html"><h3>The Couch Pillow</h3></a>
-					<p>24.99</p>
-					<img src="images/quickAddButton.png" alt="quick add button">
+					<p class="productText">Quicklook</p>
+					<a href="couchpillow.html" class="productText"><h3>The Couch Pillow</h3></a>
+					<p class="productText" style="color: red">$24.99</p>
+					<img src="images/quickAddButton.png" alt="quick add" style="float: left;">
 			</div>
 
 			<div class="productItem">
 				<img src="images/roundPillow.jpg" alt="round pillow" width="200">
-					<p>Quicklook</p>
-					<br>
-					<h3>The Round Pillow</h3>
-					<p>24.99</p>
-					<img src="images/quickAddButton.png" alt="quick add button">
+					<p class="productText">Quicklook</p>
+					<h3 class="productText">The Round Pillow</h3>
+					<p class="productText" style="color: red">$24.99</p>
+					<img src="images/quickAddButton.png" alt="quick add" style="float: left;">
 			</div>
 
 			<div class="productItem">
 				<img src="images/floorPillow.jpeg" alt="floor pillow" width="200">
-					<p>Quicklook</p>
-					<br>
-					<h3>The Floor Pillow</h3>
-					<p>24.99</p>
-					<img src="images/quickAddButton.png" alt="quick add button">
+					<p class="productText">Quicklook</p>
+					<h3 class="productText">The Floor Pillow</h3>
+					<p class="productText" style="color: red">$24.99</p>
+					<img src="images/quickAddButton.png" style="float: left;">
 			</div>
 
 		</div>
