--- a/homework_5/contact-us.html
+++ b/homework_5/contact-us.html
@@ -12,7 +12,7 @@
 		<div id="header">
 			<a href="index.html"><img class="center" src="images/logo.png" alt="logo" width="350"></a>
 			<h1 style="text-align: center">Artisan Pillows For Your Home</h1>
-		</div>
+		</div><!-- #header -->
 
 		<hr class="horizontal-bar">
 
@@ -34,7 +34,7 @@
 					<a href="contact-us.html">Contact Us</a>
 					</li>
 			</ul>
-		</div>
+		</div><!-- #topNav -->
 
 		<hr class="horizontalBar">
 
@@ -43,10 +43,9 @@
 			<div id="mainContentLeft">
 				<h2 style="margin-left: 25px">Map</h2>
 				<img src="images/map.png" alt="map" width="500" style="margin-left: 25px; float: left">
-			</div>
+			</div><!-- mainContentLeft -->
 
 			<div id="mainContentRight" style="margin-bottom: 150px">
-
 				<h2>Hours</h2>
 				<p><strong>Monday-Friday</strong>: 9:00am-5:00pm</p>
 				<p><strong>Saturday-Sunday:</strong> 9:00am-9:00pm</p>
@@ -58,8 +57,11 @@
 				<p><strong>Address:</strong> 1234 FluffStuff St.,</p>
                 <p>Pittsburgh, PA,</p>
                 <p>15289</p>
+            </div><!-- #mainContentRight -->
 
-            </div>
-	</div>
+        </div><!-- #mainContentDetail -->
+
+	</div><!-- #wrapper -->
+	
 </body>
 </html>
