--- a/homework_5/couchpillow.html
+++ b/homework_5/couchpillow.html
@@ -12,7 +12,7 @@
 		<div id="header">
 			<a href="index.html"><img class="center" src="images/logo.png" alt="logo" width="350"></a>
 			<h1>Artisan Pillows For Your Home</h1>
-		</div>
+		</div><!-- #header -->
 
 		<hr class="horizontalBar">
 
@@ -34,7 +34,7 @@
 					<a href="contact-us.html">Contact Us</a>
 					</li>
 			</ul>
-		</div>
+		</div><!-- topNav -->
 
 		<hr class="horizontalBar">
 
@@ -46,15 +46,15 @@
 
 				<div id="headerImg">
 					<img src="images/couchPillow.jpg" width="500" alt="couch pillow">
-				</div>
+				</div><!-- #headerImg -->
 
 				<div id="detailImg">
 					<img class="detailImgItem" src="images/detail1.jpg" width="125" alt="detail image 1">
 					<img class="detailImgItem" src="images/couchPillow.jpg" width="125" alt="detail image 2">
 					<img class="detailImgItem" src="images/detail2.jpg" width="125" alt="detail image 3">
-				</div>
+				</div><!-- #detailImg -->
 
-			</div>
+			</div><!-- #mainContentLeft -->
 
 			<div id="mainContentRight">
 
@@ -67,11 +67,15 @@
 					<img src="images/fill.png" alt="fill">
 				<h3>Qty:</h3>
 				<img src="images/blank.png" alt="qty" style="margin-bottom: 25px">
-			</div>
+			</div><!-- #mainContentRight -->
+
 			<br>
+
 			<img src="images/addToCart.png" alt="add to cart">
 			<img src="images/addToWishlist.png" alt="add to wishlist">
-		</div>
-</div>
+
+		</div><!-- #mainContentDetail -->
+
+	</div><!-- #wrapper -->
 </body>
 </html>
