--- a/homework_5/index.html
+++ b/homework_5/index.html
@@ -12,7 +12,7 @@
 		<div id="header">
 			<a href="index.html"><img class="center" src="images/logo.png" alt="logo" width="350"></a>
 			<h1 style="text-align: center">Artisan Pillows For Your Home</h1>
-		</div>
+		</div><!-- header -->
 
 		<hr class="horizontalBar">
 
@@ -34,7 +34,7 @@
 					<a href="contact-us.html">Contact Us</a>
 					</li>
 			</ul>
-		</div>
+		</div><!-- topNav -->
 
 		<hr class="horizontalBar">
 		<br>
@@ -48,10 +48,9 @@
 			<tr>
 				<td><img src="images/couch3.png" alt="couch" height="200" width="300"></td>
 			</tr>
-		</table>
+		</table><!-- #mainImg -->
 
-		
-
-	</div>
+	</div><!-- #wrapper -->
+	
 </body>
 </html>
