--- a/homework_5/products.html
+++ b/homework_5/products.html
@@ -12,7 +12,7 @@
 		<div id="header">
 			<a href="index.html"><img class="center" src="images/logo.png" alt="logo" width="350"></a>
 			<h1>Artisan Pillows For Your Home</h1>
-		</div>
+		</div><!-- header -->
 
 		<hr class="horizontalBar">
 
@@ -34,52 +34,53 @@
 					<a href="contact-us.html">Contact Us</a>
 					</li>
 			</ul>
-		</div>
+		</div><!-- topNav -->
 
 		<hr class="horizontalBar">
-	</div>
 
-	<div id="mainContentProduct">
+		<div id="mainContentProduct">
 
-		<p>All Products</p>
+			<p>All Products</p>
 
-		<div id="productList">
+			<div id="productList">
 
-			<div class="productItem">
-				<img src="images/bedPillow.jpg" alt="bed pillow" width="200">
-					<p class="productText">Quicklook</p>
-					<h3 class="productText">The Bed Pillow</h3>
-					<p class="productText" style="color: red">$24.99</p>
-					<img src="images/quickAddButton.png" alt="quick add" style="float: left;">
-			</div>
+				<div class="productItem">
+					<img src="images/bedPillow.jpg" alt="bed pillow" width="200">
+						<p class="productText">Quicklook</p>
+						<h3 class="productText">The Bed Pillow</h3>
+						<p class="productText" style="color: red">$24.99</p>
+						<img src="images/quickAddButton.png" alt="quick add" style="float: left;">
+				</div><!-- #productList -->
 
-			<div class="productItem">
-				<a href="couchpillow.html"><img src="images/couchPillow.jpg" alt="couch pillow" width="200"></a>
-					<p class="productText">Quicklook</p>
-					<a href="couchpillow.html" class="productText"><h3>The Couch Pillow</h3></a>
-					<p class="productText" style="color: red">$24.99</p>
-					<img src="images/quickAddButton.png" alt="quick add" style="float: left;">
-			</div>
+				<div class="productItem">
+					<a href="couchpillow.html"><img src="images/couchPillow.jpg" alt="couch pillow" width="200"></a>
+						<p class="productText">Quicklook</p>
+						<a href="couchpillow.html" class="productText"><h3>The Couch Pillow</h3></a>
+						<p class="productText" style="color: red">$24.99</p>
+						<img src="images/quickAddButton.png" alt="quick add" style="float: left;">
+				</div><!-- #productItem -->
 
-			<div class="productItem">
-				<img src="images/roundPillow.jpg" alt="round pillow" width="200">
-					<p class="productText">Quicklook</p>
-					<h3 class="productText">The Round Pillow</h3>
-					<p class="productText" style="color: red">$24.99</p>
-					<img src="images/quickAddButton.png" alt="quick add" style="float: left;">
-			</div>
+				<div class="productItem">
+					<img src="images/roundPillow.jpg" alt="round pillow" width="200">
+						<p class="productText">Quicklook</p>
+						<h3 class="productText">The Round Pillow</h3>
+						<p class="productText" style="color: red">$24.99</p>
+						<img src="images/quickAddButton.png" alt="quick add" style="float: left;">
+				</div><!-- #productItem -->
 
-			<div class="productItem">
-				<img src="images/floorPillow.jpeg" alt="floor pillow" width="200">
-					<p class="productText">Quicklook</p>
-					<h3 class="productText">The Floor Pillow</h3>
-					<p class="productText" style="color: red">$24.99</p>
-					<img src="images/quickAddButton.png" style="float: left;">
-			</div>
+				<div class="productItem">
+					<img src="images/floorPillow.jpeg" alt="floor pillow" width="200">
+						<p class="productText">Quicklook</p>
+						<h3 class="productText">The Floor Pillow</h3>
+						<p class="productText" style="color: red">$24.99</p>
+						<img src="images/quickAddButton.png" alt="quick add" style="float: left;">
+				</div><!-- #productItem -->
 
-		</div>
+			</div><!-- #productList -->
 
-	</div>
+		</div><!-- #mainContentProduct -->
+
+	</div><!-- #wrapper -->
 
 </body>
 </html>
